[package]
name = "classic-core"
version = "8.0.0"
edition = "2021"
authors = ["CLASSIC Development Team"]
description = "High-performance Rust core for CLASSIC Fallout 4 crash log analyzer"
repository = "https://github.com/evildarkarchon/CLASSIC-Fallout4"

[lib]
name = "classic_core"
# Path to the Rust source code
path = "src/lib.rs"
# cdylib for Python extension, rlib for Rust tests
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 for Python bindings - using abi3-py312 for Python 3.12+ compatibility
pyo3 = { workspace = true, features = ["extension-module"] }

# CLASSIC modular crates (workspace dependencies)
classic-shared = { path = "../classic-shared" }
classic-yaml-py = { path = "../classic-yaml-py" }
classic-database-py = { path = "../classic-database-py" }
classic-file-io-py = { path = "../classic-file-io-py" }
classic-scanlog-py = { path = "../classic-scanlog-py" }
classic-config-py = { path = "../classic-config-py" }

# Legacy support - minimal dependencies for backward compatibility
tokio = { workspace = true, features = ["full"] }
rayon = { workspace = true }

[dev-dependencies]
cargo-tarpaulin = "0.32.8"
criterion = "0.7.0"        # Benchmarking
proptest = "1.5"           # Property-based testing
rstest = "0.26.1"          # Parameterized testing
tempfile = "3.10"          # Temporary directories for tests

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
strip = false     # Keep symbols for debugging
debug = 1         # Include debug info

[profile.bench]
inherits = "release"

[lints.rust]
deprecated = "deny"
