[package]
name = "classic-core"
version = "8.0.0"
edition = "2024"
authors = ["CLASSIC Development Team"]
description = "High-performance Rust core for CLASSIC Fallout 4 crash log analyzer"
repository = "https://github.com/evildarkarchon/CLASSIC-Fallout4"

[lib]
name = "classic_core"
# Path to the Rust source code
path = "src/lib.rs"
# cdylib for Python extension, rlib for Rust tests
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 for Python bindings - using abi3-py312 for Python 3.12+ compatibility
pyo3 = { workspace = true, features = ["extension-module"] }

# CLASSIC modular crates (workspace dependencies)
classic-shared-core = { path = "../classic-shared-core" }
classic-shared-py = { path = "../classic-shared-py" }

# Pure business logic crates (for re-export)
classic-yaml-core = { path = "../classic-yaml-core" }
classic-database-core = { path = "../classic-database-core" }
classic-file-io-core = { path = "../classic-file-io-core" }
classic-scanlog-core = { path = "../classic-scanlog-core" }
classic-config-core = { path = "../classic-config-core" }

# Python binding crates (for re-export)
# Use package names since [lib] name differs from package name
classic-yaml = { package = "classic-yaml-py", path = "../classic-yaml-py" }
classic-database = { package = "classic-database-py", path = "../classic-database-py" }
classic-file-io = { package = "classic-file-io-py", path = "../classic-file-io-py" }
classic-scanlog = { package = "classic-scanlog-py", path = "../classic-scanlog-py" }
classic-config = { package = "classic-config-py", path = "../classic-config-py" }

# Legacy support - minimal dependencies for backward compatibility
tokio = { workspace = true, features = ["full"] }
rayon = { workspace = true }

[dev-dependencies]
cargo-tarpaulin = "0.32.8"
criterion = "0.7.0"        # Benchmarking
proptest = "1.5"           # Property-based testing
rstest = "0.26.1"          # Parameterized testing
tempfile = "3.10"          # Temporary directories for tests

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
strip = false     # Keep symbols for debugging
debug = 1         # Include debug info

[profile.bench]
inherits = "release"

[lints.rust]
deprecated = "deny"
rust_2024_compatibility = "warn"
unsafe_code = "deny"  # We don't use unsafe in CLASSIC
missing_docs = "warn"   # Encourage documentation