[package]
name = "classic-file-io"
version = "8.0.0"
edition = "2021"
rust-version = "1.81"
authors = ["CLASSIC Development Team"]
description = "High-performance file I/O operations for CLASSIC"
repository = "https://github.com/evildarkarchon/CLASSIC-Fallout4"

[lib]
name = "classic_file_io"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 bindings
pyo3 = { workspace = true, features = ["extension-module"] }

# CLASSIC shared utilities
classic-shared = { path = "../classic-shared" }

# File I/O
encoding_rs = { workspace = true }
memmap2 = { workspace = true }
walkdir = { workspace = true }
ddsfile = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Caching and concurrency
dashmap = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }

# Parsing
regex = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
log = { workspace = true }

[profile.release]
# Inherits from workspace

[dev-dependencies]
tempfile = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
rusqlite = { workspace = true }
