[package]
name = "classic-registry-py"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["CLASSIC Development Team"]
description = "Python bindings for classic-registry-core"
license = "MIT"

[lib]
name = "classic_registry"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 bindings
pyo3 = { workspace = true, features = ["extension-module"] }

# Core registry business logic
classic-registry-core = { path = "../classic-registry-core" }

[lints.rust]
deprecated = "deny"
rust_2024_compatibility = "deny"
unsafe_code = "deny"  # We don't use unsafe in CLASSIC
missing_docs = "warn"   # Encourage documentation
unused = "deny"